# axum-jwt-auth

./: .gitignore  Cargo.toml  Dockerfile  compose.yaml
config/: auth.rs
frontend/: index.html  nginx.conf
frontend/css/: style.css
frontend/js/: api.js  app.js  auth.js  ui.js
migrations/: 20260626192533_init.down.sql  20260626192533_init.up.sql
src/: app.rs  context.rs  lib.rs
src/config/: auth.rs  db.rs  log.rs  mod.rs
src/controllers/: auth.rs
src/error/: lib.rs  mod.rs
src/middleware/: trace.rs
src/middlewares/: auth.rs  error.rs  refresh.rs
src/models/: token.rs  user.rs  users.rs
