[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "auth"
path = "src/bin/main.rs"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie", "typed-header", "typed-routing"] }
chrono = { version = "0.4.45", features = ["serde"] }
color-eyre = "0.6.5"
config = { version = "0.15.24", features = ["yaml"] }
futures-util = "0.3.32"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
redis = { version = "1.2.4", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "2.0.18"
time = { version = "0.3.51", features = ["serde"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["tracing", "tokio"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "serde", "tracing", "json"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
